get rid of overflow on table cell styling, to prevent scrollbars

--- a/packages/lesswrong/components/lexical/themes/PlaygroundEditorTheme.css
+++ b/packages/lesswrong/components/lexical/themes/PlaygroundEditorTheme.css
@@ -296,7 +296,6 @@
   padding: 6px 8px;
   position: relative;
   outline: none;
-  overflow: auto;
 }
 /*
   A firefox workaround to allow scrolling of overflowing table cell
